fix(style): `.largetype` not centered

--- a/_app/assets/_less/custom.less
+++ b/_app/assets/_less/custom.less
@@ -120,4 +120,9 @@ body {
   .center {
     text-align: center;
   }
+
+  // Re-apply center style for largetypes (ie. Donate page)
+  .largetype {
+    text-align: center;
+  }
 }
